tests/negative/semantic/redeclare_parameter_local/input.ci
int f(int x) {
    int x = 2;
    return x;
}

void main() {
    print(toString(f(1)) + "\n");
}
